--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
         <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="navigate()">Add Product</a>
+        <a class="nav-link" (click)="navigate()"><span class="add-icon"><i class="fa fa-plus"></i></span>Add Product</a>
       </li>
     </ul>
   </div>
