--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,13 @@
 nav.bg-primary {
   background: #a17fe0 !important;
 }
+
+.add-icon {
+  font-size: 16px;
+  margin-right: 4px;
+  margin-left: 8px;
+}
+
+.nav-link {
+  cursor: pointer;
+}
