--- a/src/app/widgets/product-card/product-card.component.html
+++ b/src/app/widgets/product-card/product-card.component.html
@@ -3,5 +3,6 @@
   <div class="card-body text-center">
     <h5 class="card-title">{{product.title}}</h5>
     <h6 class="card-subtitle mb-2 text-muted"><i>Prize: ${{product.price}}</i> </h6>
+    <p class="card-subtitle mb-2 text-muted"><i>{{product.createdAt | date}}</i> </p>
   </div>
 </div>
