--- a/src/app/widgets/product-card/product-card.component.scss
+++ b/src/app/widgets/product-card/product-card.component.scss
@@ -13,7 +13,7 @@
 }
 
 .card-img-top {
-  height: 14em !important;
+  height: 13em !important;
   margin: 0 auto !important;
 }
 
@@ -21,4 +21,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+}
+
+@media screen and (max-width: 766px) {
 }
